# mda-plugins-juce

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.markdown  build.sh
.github/workflows/: build.yml
Combo/: README.markdown
Combo/Source/: PluginProcessor.cpp  PluginProcessor.h
DeEss/: README.markdown
DeEss/Source/: PluginProcessor.cpp  PluginProcessor.h
Dither/: MDADither.jucer  README.markdown
Dither/Source/: PluginProcessor.cpp  PluginProcessor.h
DubDelay/: README.markdown
DubDelay/Source/: PluginProcessor.cpp  PluginProcessor.h
Leslie/: README.markdown
Leslie/Source/: PluginProcessor.cpp  PluginProcessor.h
Looplex/: README.markdown
Looplex/Source/: PluginProcessor.cpp  PluginProcessor.h
MultiBand/: README.markdown
MultiBand/Source/: PluginProcessor.cpp  PluginProcessor.h
RePsycho/: README.markdown
RePsycho/Source/: PluginProcessor.cpp  PluginProcessor.h
RoundPan/: README.markdown
RoundPan/Source/: PluginProcessor.cpp  PluginProcessor.h
SpecMeter/: README.markdown
SpecMeter/Source/: PluginProcessor.cpp  PluginProcessor.h
TalkBox/: README.markdown
TalkBox/Source/: PluginProcessor.cpp  PluginProcessor.h
ThruZero/: README.markdown
ThruZero/Source/: PluginProcessor.cpp  PluginProcessor.h
Tracker/: README.markdown
Tracker/Source/: PluginProcessor.cpp  PluginProcessor.h
Transient/: README.markdown
Transient/Source/: PluginProcessor.cpp  PluginProcessor.h
VocInput/: README.markdown
VocInput/Source/: PluginProcessor.cpp  PluginProcessor.h
Vocoder/: README.markdown
Vocoder/Source/: PluginProcessor.cpp  PluginProcessor.h
